test/fail/Issue783b.agda

record R : Setâ‚ where
  X = Set Set   -- should get error here
  field A : Set
